--- a/README.html
+++ b/README.html
@@ -6,87 +6,6 @@
 <title>Readme - Gen</title>
 </head>
 <body>
-<div id = "left">
-<a href="index.html" class="navbar" >Home</a>
-<a href="known-issues.html" class="navbar">Known Issues</a>
-<a href="latest-fixes.html" class="navbar">Latest Fixes</a>
-<a href="README.html" class="navbar" id = "current">Readme</a>
-<a href="doc/README-doc.html" class="navbar" >doc / Readme</a>
-<a href="test/README-test.html" class="navbar" >test / Readme</a>
-<a href="doc/manual-home.html" class="navbar" >Manual</a>
-<a href="news.html" class="navbar">News</a>
-<a href="changelog.html" class="navbar">Changelog</a>
-<a href="policies.html" class="navbar">Policies</a>
-<a href="roadmap.html" class="navbar" >Roadmap</a>
-<a href="wishlist.html" class="navbar">Wishlist</a>
-<a href="license.html" class="navbar">License</a>
-</div>
-
-<div id = "center">
-<div id = "content">
-<div id = "AppTitle">Gen</div>
-<div id = "PageTitle">Readme</div>
-<a href="#C_HOWTO">01| HOW TO USE THIS DOCUMENT</a><br>
-<a href="#C_INTRO">02| INTRO</a><br>
-<a href="#C_GETTING_STARTED">03| GETTING STARTED</a><br>
-<a href="#C_DEPENDENCIES">04| DEPENDENCIES</a><br>
-<a href="#C_BUILDING">05| BUILDING</a><br>
-<a href="#C_INSTALLATION">06| INSTALLATION</a><br>
-<a href="#C_CONFIGURATION">07| CONFIGURATION</a><br>
-<a href="#C_MANUAL">08| MANUAL</a><br>
-<a href="#C_FAQ">09| FAQ</a><br>
-<a href="#C_PLATFORM_NOTES">10| PLATFORM NOTES</a><br>
-<a href="#C_TROUBLESHOOTING">11| TROUBLESHOOTING</a><br>
-<a href="#C_KNOWN_ISSUES">12| KNOWN ISSUES</a><br>
-<a href="#C_BUG_REPORTING">13| BUG REPORTING</a><br>
-<a href="#C_FEEDBACK">14| FEEDBACK</a><br>
-<a href="#C_TESTING">15| TESTING</a><br>
-<a href="#C_CONTRIBUTING">16| CONTRIBUTING</a><br>
-<a href="#C_UPDATING">17| UPDATING</a><br>
-<a href="#C_RECENT_CHANGES">18| RECENT CHANGES</a><br>
-<a href="#C_LICENSE">19| LICENSE</a><br>
-<a href="#C_LEGAL">20| LEGAL</a><br>
-<a href="#C_CREDITS">21| CREDITS</a><br>
-<br>
-
-<h3><a id="C_CATALOG">&mdash;01| HOW TO USE THIS DOCUMENT</a></h3>
-<p>(Note that this README is designed to be filled out over the course of many versions. Some sections are currently blank.)</p>
-<p>
-<span class="question">What is the software about?</span><br>
-See <a href="#C_INTRO">INTRO</a>.<br>
-</p><p>
-<span class="question">Is it OK for me to use? OK for me to modify? OK to make copies?</span><br>
-See <a href="#C_LICENSE">LICENSE</a> for info about the software license. License page itself is <a href='license.html'>here</a>.<br>
-See <a href="#C_LEGAL">LEGAL</a> for any additional info.<br>
-</p><p>
-<span class="question">How do I get it working?</span><br>
-See <a href="#C_GETTING_STARTED">GETTING STARTED</a> (after you have it installed and configured) to see how to use.<br>
-See <a href="#C_DEPENDENCIES">DEPENDENCIES</a> for anything external that is required or optional.
-See <a href="#C_BUILDING">BUILDING</a> for how to compile from source.<br>
-See <a href="#C_INSTALLATION">INSTALLATION</a> for how to install it on your system (and how to uninstall).<br>
-See <a href="#C_CONFIGURATION">CONFIGURATION</a> for how you can customize it for your own use.<br>
-</p><p>
-<span class="question">I cannot make it work, what now?</span><br>
-See <a href="#C_TROUBLESHOOTING">TROUBLESHOOTING</a> for dealing with problems with the software.<br>
-See <a href="#C_PLATFORM_NOTES">PLATFORM NOTES</a> for ensuring it works with your platform/OS.<br>
-See <a href="#C_MANUAL">MANUAL</a> to make sure you are using it correctly.<br>
-See <a href="#C_FAQ">FAQ</a> to see if your question has been answered.<br>
-See <a href="#C_KNOWN_ISSUES">KNOWN ISSUES</a> to see if your problem is already known about (and any workarounds / advice).<br>
-See <a href="#C_BUG_REPORTING">BUG REPORTING</a> if you want to make a report and get follow-up.<br>
-</p><p>
-<span class="question">What is in the other sections?</span><br>
-<a href="#C_FEEDBACK">FEEDBACK</a> - Info about things like feature requests.<br>
-<a href="#C_TESTING">TESTING</a> - How you can test changes you make to the code.<br>
-<a href="#C_CONTRIBUTING">CONTRIBUTING</a> - How you improve the product for everyone.<br>
-<a href="#C_UPDATING">UPDATING</a> - How to get the latest changes.<br>
-<a href="#C_RECENT_CHANGES">RECENT CHANGES</a> - What the latest changest are.<br>
-<a href="#C_CREDITS">CREDITS</a> - Third party components used.<br>
-</p><p>
-</p>
-</div>
-<div id = "footer">
-<p id = "footer-content">General Utilities For Tcl</p>
-</div>
-</div>
+<h1>test</h1>
 </body>
 </html>
